--- a/src/components/projectContainer/projectContainer.scss
+++ b/src/components/projectContainer/projectContainer.scss
@@ -46,7 +46,7 @@
         line-height: 60px;
         font-weight: 700;
 
-        width: 500px;
+        // width: 500px;
         color: #ffe8e8;
 
         cursor: pointer;
